Personalizando Buttons/Past

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
 
   <div class="box_one fade-in">
-    <!-- Logo do canal -->
-    <img src="./src/logo.png" alt="Logo Skorpion Gamer" class="logo">
+    <img src="./src/assets/logo.png" alt="Logo Skorpion Gamer" class="logo">
     <h1 class="title_one">Skorpion Gamer</h1>
   </div>
 
@@ -25,7 +24,7 @@
           </a>
         </li>
         <li>
-          <a href="https://youtube.com/SEU-CANAL" class="button_yt">
+          <a href="https://www.youtube.com/@SkorpionOFICIAL" class="button_yt">
             <i class="fab fa-youtube"></i> Link do YouTube
           </a>
         </li>
