--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Skorpion Gamer</title>
-  <link rel="stylesheet" href="style.css">
+
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  
+  <link rel="stylesheet" href="src/assets/style/style.css">
 </head>
 <body>
 
@@ -19,13 +21,13 @@
     <div class="form_box">
       <ul class="list_button">
         <li>
-          <a href="https://chat.whatsapp.com/SEU-LINK-AQUI" class="button_zap">
+          <a href="/zap.html" class="button_zap">
             <i class="fab fa-whatsapp"></i> Grupo no WhatsApp
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/@SkorpionOFICIAL" class="button_yt">
-            <i class="fab fa-youtube"></i> Link do YouTube
+          <a href="https://www.youtube.com/@SkorpionOFICIAL" class="button_yt" target="_blank">
+            <i class="fab fa-youtube"></i> Canal no YouTube
           </a>
         </li>
       </ul>
