--- a/zap.html
+++ b/zap.html
@@ -76,7 +76,7 @@
         window.location.href = grupos[tentativa];
       } else {
         document.getElementById("mensagem").innerText =
-          "Todos os grupos estão lotados ou indisponíveis no momento.";
+          "Todos os grupos estão indisponíveis no momento.";
         document.getElementById("botao-tentar").style.display = "none";
       }
     }
