--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
   <link rel="icon" href="./src/assets/logo.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  
+  <a href="https://www.youtube.com/@SkorpionOFICIAL" class="yt-float" target="_blank">
+  <i class="fab fa-youtube"></i></a>
   <link rel="stylesheet" href="src/assets/style/style.css">
 </head>
-<body>
-
+<body>  
   <div class="box_one fade-in">
     <img src="./src/assets/logo.png" alt="Logo Skorpion Gamer" class="logo">
     <h1 class="title_one">Skorpion Gamer</h1>
   </div>
-
   <div class="box_two fade-in">
     <div class="form_box">
       <ul class="list_button">
@@ -26,13 +25,12 @@
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/@SkorpionOFICIAL" class="button_yt" target="_blank">
-            <i class="fab fa-youtube"></i> Canal no YouTube
+          <a href="https://whatsapp.com/channel/0029VbAk4yt1t90hZkaKuA1U" class="button_comunidade" target="_blank">
+            <i class="fas fa-users"></i> Comunidade Skorpion Gamer
           </a>
         </li>
       </ul>
     </div>
   </div>
-
 </body>
 </html>
