--- a/zap.html
+++ b/zap.html
@@ -62,7 +62,7 @@
       "https://chat.whatsapp.com/IhF9lPJUGOA95u4hSOLyl4?mode=ac_t",   /* 7 */
       "https://chat.whatsapp.com/EsGKXBWTAf72CsXp41iwaz?mode=ac_t",   /* 8 */
       "https://chat.whatsapp.com/EZxcbsxos3U8ai7vvrnzMT?mode=ac_t",   /* 9 */
-      "https://chat.whatsapp.com/C2UyKj29me5DSZPJ7P65UK?mode=ac_t",   /* 10 */      
+      "https://chat.whatsapp.com/C2UyKj29me5DSZPJ7P65UK?mode=ac_t",   //* 10 *//  links    
     ];
 
     function getTentativa() {
