--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </a>
         </li>
         <li>
-          <a href="" class="button_comunidade" target="_blank">
+          <a href="https://whatsapp.com/channel/0029VbAk4yt1t90hZkaKuA1U" class="button_comunidade" target="_blank">
             <i class="fas fa-users"></i> Comunidade Skorpion Gamer
           </a>
         </li>
