--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <ul class="list_button">
         <li>
           <a href="/zap.html" class="button_zap">
-            <i class="fab fa-whatsapp"></i> Grupo no WhatsApp
+            <i class="fab fa-whatsapp"></i> Entrar no Grupo no WhatsApp
           </a>
         </li>
         <li>
