--- a/zap.html
+++ b/zap.html
@@ -53,6 +53,7 @@
   </style>
   <script>
     const grupos = [
+      "https://chat.whatsapp.com/BkIAWkAJfPKBIoLYxsw9pz?mode=ac_t",    /* Oficial */
       "https://chat.whatsapp.com/HltJVADQvSoAkTCldw2cHx?mode=ac_t",   /* 1 */
       "https://chat.whatsapp.com/FXTKgaARzZ43p8FWdY81NM?mode=ac_t",   /* 2 */
       "https://chat.whatsapp.com/F812YMaOPopAmDkiMo2ZbX?mode=ac_t",   /* 3 */
