--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
       <ul class="list_button">
         <li>
           <a href="/zap.html" class="button_zap">
-            <i class="fab fa-whatsapp"></i> Entrar no Grupo no WhatsApp
+            <i class="fab fa-whatsapp"></i> Comunidade Skorpion Gamer 
           </a>
         </li>
         <li>
           <a href="https://whatsapp.com/channel/0029VbAk4yt1t90hZkaKuA1U" class="button_comunidade" target="_blank">
-            <i class="fas fa-users"></i> Comunidade Skorpion Gamer
+            <i class="fas fa-users"></i> Canal Oficial no WhatsApp
           </a>
         </li>
       </ul>
     </div>
+  </div>
+    <div>
+      <h2 class="mensagem2">Receba novidades e fique por dentro do que acontece no canal!</h2>
   </div>
 </body>
 </html>
