--- a/zap.html
+++ b/zap.html
@@ -57,16 +57,16 @@
       "https://chat.whatsapp.com/BkIAWkAJfPKBIoLYxsw9pz?mode=ac_t", /* Oficial */
       "https://chat.whatsapp.com/BkIAWkAJfPKBIoLYxsw9pz?mode=ac_t", /* Oficial */
       "https://chat.whatsapp.com/BkIAWkAJfPKBIoLYxsw9pz?mode=ac_t", /* Oficial */
-      "https://chat.whatsapp.com/HltJVADQvSoAkTCldw2cHx?mode=ac_t",   /* 1 */
-      "https://chat.whatsapp.com/FXTKgaARzZ43p8FWdY81NM?mode=ac_t",   /* 2 */
-      "https://chat.whatsapp.com/F812YMaOPopAmDkiMo2ZbX?mode=ac_t",   /* 3 */
-      "https://chat.whatsapp.com/Il9vQ86zrlKLfZZdaaYJrL?mode=ac_t",   /* 4 */
-      "https://chat.whatsapp.com/Bu6i3X8uXGeIA1Oy4evnQE?mode=ac_t",   /* 5 */
-      "https://chat.whatsapp.com/Hb0m4fE2XtTJuiYK1yNwtj?mode=ac_t",   /* 6 */
-      "https://chat.whatsapp.com/IhF9lPJUGOA95u4hSOLyl4?mode=ac_t",   /* 7 */
-      "https://chat.whatsapp.com/EsGKXBWTAf72CsXp41iwaz?mode=ac_t",   /* 8 */
-      "https://chat.whatsapp.com/EZxcbsxos3U8ai7vvrnzMT?mode=ac_t",   /* 9 */
-      "https://chat.whatsapp.com/C2UyKj29me5DSZPJ7P65UK?mode=ac_t",   //* 10 *//  links    
+      // "https://chat.whatsapp.com/HltJVADQvSoAkTCldw2cHx?mode=ac_t",   /* 1 */
+      // "https://chat.whatsapp.com/FXTKgaARzZ43p8FWdY81NM?mode=ac_t",   /* 2 */
+      // "https://chat.whatsapp.com/F812YMaOPopAmDkiMo2ZbX?mode=ac_t",   /* 3 */
+      // "https://chat.whatsapp.com/Il9vQ86zrlKLfZZdaaYJrL?mode=ac_t",   /* 4 */
+      // "https://chat.whatsapp.com/Bu6i3X8uXGeIA1Oy4evnQE?mode=ac_t",   /* 5 */
+      // "https://chat.whatsapp.com/Hb0m4fE2XtTJuiYK1yNwtj?mode=ac_t",   /* 6 */
+      // "https://chat.whatsapp.com/IhF9lPJUGOA95u4hSOLyl4?mode=ac_t",   /* 7 */
+      // "https://chat.whatsapp.com/EsGKXBWTAf72CsXp41iwaz?mode=ac_t",   /* 8 */
+      // "https://chat.whatsapp.com/EZxcbsxos3U8ai7vvrnzMT?mode=ac_t",   /* 9 */
+      // "https://chat.whatsapp.com/C2UyKj29me5DSZPJ7P65UK?mode=ac_t",   //* 10 *//  links    
     ];
 
     function getTentativa() {
