--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </a>
         </li>
         <li>
-          <a href="https://whatsapp.com/channel/0029VbAk4yt1t90hZkaKuA1U" class="button_comunidade" target="_blank">
+          <a href="https://www.whatsapp.com/channel/0029Vb6cQA1EVccKeOpDq82Q" class="button_comunidade" target="_blank">
             <i class="fas fa-users"></i> Canal Oficial no WhatsApp
           </a>
         </li>
