--- a/index.html
+++ b/index.html
@@ -48,26 +48,39 @@
   </section>
 
 <section class="cadeira-section fade-in">
-  <h2 class="title_two">Minha Cadeira Gamer</h2>
+  <h2 class="title_two">Cadeira Gamer do Skorpionário</h2>
   <div class="cadeira-box">
     <img src="./src/assets/cadeira 1.jpg" alt="Cadeira Gamer - Frente" class="cadeira-img">
     <img src="./src/assets/cadeira 2.jpg" alt="Cadeira Gamer - Lado" class="cadeira-img">
-    <img src="./src/assets/cadeira 3.jpg" alt="Cadeira Gamer - Detalhes" class="cadeira-img">
-    <img src="./src/assets/cadeira 4.jpg" alt="Cadeira Gamer - Detalhes" class="cadeira-img">
+    <!-- <img src="./src/assets/cadeira 3.jpg" alt="Cadeira Gamer - Detalhes" class="cadeira-img">
+    <img src="./src/assets/cadeira 4.jpg" alt="Cadeira Gamer - Detalhes" class="cadeira-img"> -->
   </div>
-
-  <!-- Botão separado -->
+    <!-- Botão separado -->
   <div class="cadeira-button">
     <a href="https://www.pichau.com.br/cadeira-gamer-pichau-omega-s-skorpion-espuma-moldada-preto-e-vermelho-pg-omgs-skrp" 
-       class="button_cadeira" target="_blank">
+       class="button_cadeira2" target="_blank">
       <i class="fas fa-shopping-cart"></i> Comprar agora
     </a>
+  </div>
+  <div class="cadeira-section">
+    <h2 class="title_two">Caderno do Skorpionário</h2>
+    <div class="cadeira-box2">
+    <img src="./src/assets/skorpion-caderno-curta-duevky.webp" alt="Cadeira Gamer - Frente" class="cadeira-img">
+    <img src="./src/assets/skorpion-caderno-curta-loja-2-d591503929.webp" alt="Cadeira Gamer - Lado" class="cadeira-img">
+    </div>
+      <!-- Botão separado -->
+    <div class="cadeira-button">
+      <a href="https://www.curtaloja.com/caderno-skorpion-1-materia" 
+        class="button_cadeira2" target="_blank">
+        <i class="fas fa-shopping-cart"></i> Comprar agora
+      </a>
+    </div>
   </div>
 </section>
 
   <!-- SEÇÃO: Últimos Vídeos -->
   <section class="videos-section fade-in">
-    <h2 class="title_two">Últimos Vídeos</h2>
+    <h2 class="title_two">Vídeos do canal</h2>
     <div class="videos-grid">
       
       <div class="video-card">
