--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
       <div class="form_box">
         <ul class="list_button">
           <li>
-              <p class="msg">Entre em nossa comunidade no WhatsApp!</p>
-            <a href="/zap.html" class="button_zap">
+              <p class="msg">Grupo do WhatsApp!</p>
+              <a href="https://chat.whatsapp.com/Ile29WKfYze5xZF2bVJB7a" class="button_zap">
               <i class="fab fa-whatsapp"></i> Amigos do Skorpion Gamer 
+            </a>
+          </li>
+          <li>
+              <a href="https://chat.whatsapp.com/EfKM9ikrMUMHtKtecHhMyt" class="text_button">
+              <i class="fab fa-whatsapp"></i> Grupo lotado? Clique Aqui!
             </a>
           </li>
           <!--
