--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <section class="header-section fade-in">
     <div class="box_one">
       <img src="./src/assets/logo.png" alt="Logo Skorpion Gamer" class="logo">
-      <h1 class="title_one">Skorpion Gamer</h1>
+      <h1 class="title_one">Skorpion Gamer YT</h1>
     </div>
   </section>
 
