--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </li>
           <li>
               <a href="https://chat.whatsapp.com/HFxLXqdtMvq3QLzPIEtPP2" class="text_button">
-              <i class="fab fa-whatsapp"></i> Grupo lotado? Clique Aqui!!
+              <i class="fab fa-whatsapp"></i> Grupo lotado? Clique Aqui!
             </a>
           </li>
           <!--
@@ -142,4 +142,5 @@
 </div>
 </body>
 </html>
+
 
